# ri-flow

./: README.md  pyproject.toml
imaging/: wsclean_imaging.py
riflow/: __init__.py  config.py
riflow/coords/: __init__.py
riflow/data/: extract_config_base.yaml
riflow/extraction/: light_curves.py
riflow/flagging/: flag_data.py
riflow/imaging/: dft.py  gif.py  nufft_helpers.py  weights.py  wsclean_image.py  wstack.py
riflow/io/: fits.py  ms.py
riflow/scripts/: dft_gif.py  make_gif.py  nufft_gif.py  run_extraction.py  vis_analysis.py
riflow/visibilities/: vis_helpers.py
